Созданы классы для задач, подзадач, и соеденительной таблицы ProjUser

--- a/Project/Project.csproj
+++ b/Project/Project.csproj
@@ -63,6 +63,9 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Class\ProjUser.cs" />
+    <Compile Include="Class\Subtask.cs" />
+    <Compile Include="Class\Task.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
