--- a/Project/Project.csproj
+++ b/Project/Project.csproj
@@ -63,9 +63,13 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Class\ProjUser.cs" />
-    <Compile Include="Class\Subtask.cs" />
-    <Compile Include="Class\Task.cs" />
+    <Compile Include="Classes\KanbanColumn.cs" />
+    <Compile Include="Classes\Project.cs" />
+    <Compile Include="Classes\ProjUser.cs" />
+    <Compile Include="Classes\Subtask.cs" />
+    <Compile Include="Classes\Task.cs" />
+    <Compile Include="Classes\TaskUser.cs" />
+    <Compile Include="Classes\User.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -198,7 +202,6 @@
     <Resource Include="Image\fon.jpg" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Classes\" />
     <Folder Include="DocumentContext\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
