созданы контекст для задач, подзадач, таблицы projuser

--- a/Project/Project.csproj
+++ b/Project/Project.csproj
@@ -63,6 +63,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Class\DocumentContext.cs" />
     <Compile Include="Class\ProjUser.cs" />
     <Compile Include="Class\Subtask.cs" />
     <Compile Include="Class\Task.cs" />
@@ -199,7 +200,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Classes\" />
-    <Folder Include="DocumentContext\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
