--- a/Project/Project.csproj
+++ b/Project/Project.csproj
@@ -167,7 +167,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Pages\project.xaml">
+    <Page Include="Pages\Project1.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -212,8 +212,8 @@
     <Compile Include="Pages\PersonalAccount.xaml.cs">
       <DependentUpon>PersonalAccount.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Pages\project.xaml.cs">
-      <DependentUpon>project.xaml</DependentUpon>
+    <Compile Include="Pages\Project1.xaml.cs">
+      <DependentUpon>Project1.xaml</DependentUpon>
     </Compile>
     <Compile Include="Pages\Registration.xaml.cs">
       <DependentUpon>Registration.xaml</DependentUpon>
