Контексты для задач, подзадач и ProjUser. Елтышева

--- a/Project/Project.csproj
+++ b/Project/Project.csproj
@@ -118,6 +118,9 @@
     <Compile Include="Classes\Common\Connection.cs" />
     <Compile Include="Classes\KanbanColumnContext.cs" />
     <Compile Include="Classes\ProjectContext.cs" />
+    <Compile Include="Classes\ProjUserContext.cs" />
+    <Compile Include="Classes\SubtaskContext.cs" />
+    <Compile Include="Classes\TaskContext.cs" />
     <Compile Include="Classes\TaskUserContext.cs" />
     <Compile Include="Classes\UserContext.cs.cs" />
     <Compile Include="Modell\KanbanColumn.cs" />
